# Chatbot

./: README.md  nginx.conf  package-lock.json
backend/: .env  Dockerfile  README.md  antige-frakcjonowanie-mikroiglowe-rf.txt  bioxel.txt  docker-compose.yml  krioanalgezja.txt  laseroterapia-podstawy.txt  lasery-diodowe-swing-i-twist.txt  llm_comp_weaviate_top5_hybrid.csv  pyproject.toml  q-master.txt  requirements.txt
backend/avatar/: main.py  settings.json
backend/avatar/helpers/: openai_helpers.py
backend/avatar/middleware/: checkAdmin.py  jwt.py
backend/avatar/models/: avatar.py  conversation.py  file.py  page_settings.py  user.py
backend/avatar/routes/: ai_routes.py  avatar_routes.py  conversation_routes.py  file_routes.py  page_settings_routes.py  retrieval_routes.py  user_routes.py
backend/avatar/services/: function_handlers.py  openai_service.py  stream_service.py
backend/chatbot/: constants.py  main.py  websocket_manager.py
backend/chatbot/database/: database.py
backend/chatbot/middleware/: checkAdmin.py  jwt.py
backend/chatbot/models/: assistant.py  conversation.py  message.py  pdf_file.py  user.py  utils.py
backend/chatbot/routes/: ai_response_routes.py  ai_routes.py  assistant_routes.py  conversation_routes.py  file_routes.py  llm_arena_routes.py  message_routes.py  openai_assistants_routes.py  pdf_routes.py  querying_routes.py  retrieval_routes.py  scraping_roues.py  upserting_routes.py  user_routes.py
backend/chatbot/services/: function_handlers.py  openai_service.py  stream_service.py
backend/setup/: .env.example  README.md  requirements.txt  setup_datastore.py
backend/setup/data/: extract_data.py  extract_data_gptv.py
(+141 files in other folders)
